sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:58: error: ')' expected but ';' found.
  var currBase = mod(getTrouBase()-sens, nbBases;
                                                ^SelectBaseball:70: error: ';' expected but ',' found.
    deplace(currBase+sens)%nbBases, 0);
                                  ^SelectBaseball:72: error: ')' expected but '}' found.
}
^